--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build": "gulp build",
     "release": "gulp release"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.5"
+  },
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-include": "^2.3.1",
     "gulp-rename": "^1.2.2",
